# market-lab

./: .gitignore  Cargo.toml  Makefile  README.md  marketlab.example.toml
.github/workflows/: ci.yml  release.yml
examples/: all-sources-live.js  bulk-limit-protected.js  buy-dip.js  buy-pressure.js  candle-summary.js  cross-exchange-spread.js  dip-tp-positions.js  mid-price-maker.js  oi-volumes-check.js  sma-cross.js  sma-crossover.js  vd-summary.js
scripts/: package-release.sh  release-tag.sh
src/: config.rs  credentials.rs  lib.rs  main.rs
src/bots/: grid.rs  jobs.rs  mid_price.rs  mod.rs
src/cli/: mod.rs
src/commands/: cvd.rs  execution.rs  health.rs  imbalance.rs  inspect.rs  markets.rs  mod.rs  realtime.rs  replay.rs  runtime.rs  slippage.rs  source.rs  vamp.rs
src/commands/bot/: grid.rs  jobs.rs  mid_price.rs  mod.rs
src/commands/market/: inspect.rs  mod.rs  replay.rs
src/commands/script/: backtest.rs  jobs.rs  mod.rs  run.rs  runs.rs
src/commands/source/: candles.rs  common.rs  funding.rs  mod.rs  oi.rs  orderbook.rs  stats.rs  vd.rs  volumes.rs
src/commands/strategy/: jobs.rs  mod.rs  oiwap.rs  sma_crossover.rs  twap.rs  vwap.rs
src/core/: orderbook.rs
src/domain/: enums.rs  execution.rs  mod.rs  requests.rs  types.rs
src/functions/: imbalance.rs  mod.rs  orderbook.rs  series.rs  slippage.rs  vamp.rs
src/markets/: mod.rs
src/providers/: execution.rs  mod.rs
src/runtime/: mod.rs
src/scripting/: engine.rs  execution.rs  inputs.rs  jobs.rs  limits.rs  manifest.rs  market_data.rs  mod.rs  output.rs  studies.rs  study.rs  telemetry.rs
src/strategies/: execution.rs  jobs.rs  mod.rs  oiwap.rs  twap.rs  vwap.rs
(+46 files in other folders)
