[package]
name = "market-lab"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "mlab"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
mimalloc = "0.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.32"
flate2 = "1.1.2"
tar = "0.4.44"
semver = "1.0.27"
