[package]
name = "market-lab"
version = "0.0.4"
edition = "2024"
default-run = "mlab"

[[bin]]
name = "mlab"
path = "src/main.rs"

[[bin]]
name = "mlabd"
path = "src/bin/mlabd.rs"

[dependencies]
anyhow = "1.0.102"
bulk-keychain = "=0.1.19"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
mimalloc = "0.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.32"
flate2 = "1.1.2"
tar = "0.4.44"
semver = "1.0.27"
rquickjs = "0.11.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
keyring = { version = "3.6.3", features = ["apple-native", "sync-secret-service", "crypto-rust", "vendored"] }
rpassword = "7.4.0"
toml = "1.1.2"
zeroize = "1.8.2"
libc = "0.2"
